# msg_character_controller

./: CLAUDE.md  Cargo.toml  DIAGNOSTIC_FINDINGS.md  IMPLEMENTATION_COMPLETE.md  MIGRATION_NOTES.md  README.md  ROOT_CAUSE_FOUND.md  SHAPECASTER_MIGRATION_COMPLETE.md  TASKS.md  TEST_REWRITE_SUMMARY.md  clippy.toml  test_status.txt
.cargo/: config.toml
.claude/: ralph-loop.local.md  settings.local.json
.github/workflows/: ci.yaml
docs/: avian-caster-research.md
examples/: ballpit.rs  ballpit_avian.rs  float_test.rs  float_test_avian.rs  hilly_planet.rs  hilly_planet_avian.rs  platform_box.rs  platform_box_avian.rs  spherical_planet.rs  spherical_planet_avian.rs
examples/helpers/: config_panel.rs  controls_plugin.rs  diagnostics_panel.rs  mesh_shapes.rs  mod.rs  physics.rs  plugin.rs  respawn.rs
src/: avian.rs  backend.rs  collision.rs  config.rs  detection.rs  intent.rs  lib.rs  rapier.rs  state.rs  systems.rs
src/backend/: avian.rs  mod.rs  noop.rs  traits.rs
src/config/: floating.rs  flying.rs  jumping.rs  mod.rs  sensors.rs  spring.rs  upright.rs  walking.rs  wall_jumping.rs
tests/: avian2d.rs  debug_avian.rs  integration.rs  rapier2d.rs
