[package]
name = "msg_character_controller"
version = "0.3.0"
edition = "2024"
rust-version = "1.85"
authors = ["ffmulks <63452434+ffmulks@users.noreply.github.com>"]
description = "Advanced 2D floating rigidbody character controller for Bevy with physics backend abstraction"
license = "MIT OR Apache-2.0"
repository = "https://github.com/MolecularSadism/msg_character_controller"
documentation = "https://docs.rs/msg_character_controller"
readme = "README.md"
keywords = ["bevy", "gamedev", "character-controller", "physics", "2d"]
categories = ["game-development", "game-engines"]
exclude = [".github/", "CLAUDE.md"]

[dependencies]
bevy = { version = "0.18", default-features = false }

[dev-dependencies]
avian2d = { version = "0.5", features = ["2d"] }
bevy_egui = "0.39"
approx = "0.5"
# Full Bevy features for examples (rendering, UI)
# Note: Windowing backend (x11/wayland) will be auto-detected by bevy_winit
bevy = { version = "0.18", features = [
    "bevy_core_pipeline",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "bevy_winit",
    "default_font",
    "multi_threaded",
    "png",
] }

[features]
default = ["avian2d"]
# Physics backend: avian2d (Avian physics engine, formerly XPBD)
# Usage: CharacterControllerPlugin::<Avian2dBackend>::default()
avian2d = ["dep:avian2d"]

[dependencies.avian2d]
version = "0.5"
features = ["2d"]
optional = true

# Examples:
# - Avian2D (default): cargo run --example platform_box
[[example]]
name = "platform_box"
path = "examples/platform_box.rs"

[[example]]
name = "spherical_planet"
path = "examples/spherical_planet.rs"

[[example]]
name = "float_test"
path = "examples/float_test.rs"

[[example]]
name = "hilly_planet"
path = "examples/hilly_planet.rs"

[[example]]
name = "ballpit"
path = "examples/ballpit.rs"
