[package]
name = "msg_character_controller"
version = "0.3.0"
edition = "2024"
rust-version = "1.85"
authors = ["ffmulks <63452434+ffmulks@users.noreply.github.com>"]
description = "Advanced 2D floating rigidbody character controller for Bevy with physics backend abstraction"
license = "MIT OR Apache-2.0"
repository = "https://github.com/MolecularSadism/msg_character_controller"
documentation = "https://docs.rs/msg_character_controller"
readme = "README.md"
keywords = ["bevy", "gamedev", "character-controller", "physics", "2d"]
categories = ["game-development", "game-engines"]
exclude = [".github/", "CLAUDE.md"]

[dependencies]
bevy = { version = "0.18", default-features = false }

[dev-dependencies]
avian2d = "0.5"
# bevy_rapier2d support temporarily disabled until Bevy 0.18 compatibility is released
# bevy_rapier2d = { version = "0.32.0", features = ["simd-stable", "debug-render-2d"] }
bevy_egui = "0.39"

[features]
default = ["avian2d"]
# Physics backend: avian2d (Avian physics engine, formerly XPBD)
# Usage: CharacterControllerPlugin::<Avian2dBackend>::default()
avian2d = ["dep:avian2d"]
# Physics backend: bevy_rapier2d (Rapier2D physics engine)
# NOTE: Temporarily disabled until bevy_rapier2d is updated for Bevy 0.18
# Usage: CharacterControllerPlugin::<Rapier2dBackend>::default()
# rapier2d = ["dep:bevy_rapier2d"]
# Feature for running examples (requires platform windowing libs)
examples = [
    "bevy/bevy_core_pipeline",
    "bevy/bevy_sprite",
    "bevy/bevy_sprite_render",
    "bevy/bevy_text",
    "bevy/bevy_ui",
    "bevy/bevy_winit",
    "bevy/default_font",
    "bevy/multi_threaded",
    "bevy/png",
    "bevy/x11",
]

[dependencies.avian2d]
version = "0.5"
optional = true

# bevy_rapier2d support temporarily disabled until Bevy 0.18 compatibility is released
# [dependencies.bevy_rapier2d]
# version = "0.32.0"
# features = ["simd-stable", "debug-render-2d"]
# optional = true

# Examples - currently only work with Avian2D backend (Rapier2D support pending Bevy 0.18 update):
# - Avian2D (default): cargo run --example platform_box --features examples
[[example]]
name = "platform_box"
path = "examples/platform_box.rs"
required-features = ["examples"]

[[example]]
name = "spherical_planet"
path = "examples/spherical_planet.rs"
required-features = ["examples"]

[[example]]
name = "float_test"
path = "examples/float_test.rs"
required-features = ["examples"]

[[example]]
name = "hilly_planet"
path = "examples/hilly_planet.rs"
required-features = ["examples"]

[[example]]
name = "ballpit"
path = "examples/ballpit.rs"
required-features = ["examples"]
